# piclock

./: .gitignore  README.md  issue_log_tearing.md  issues.md  piclock.service  project.md  pyproject.toml  requirements.txt
.github/prompts/: plan-piClock3.prompt.md
data/: .dial_state.json  .timer_state.json  piclock.db  settings.json
data/dial_themes/: Default Dial.json  dial2.json
data/faces/: Classic Clock.json  Classic.json  Minimal.json  outside-in.json
data/themes/: classic.json  minimal.json  modern.json  outside-in.json  picture.json
scripts/: install.bat  install.sh  uninstall.sh  update.sh
sdk/: README.md  pyproject.toml
sdk/examples/: clock_map.py
sdk/piclock/: client.py
src/: _version.py  main.py
src/alarms/: audio.py  ipc.py  scheduler.py  visual.py
src/clock/: color.py  dial.py  display.py  effects.py  engine.py  face.py  hands.py  renderer.py
src/config/: settings.py
src/faces/: __init__.py  converter.py  datasources.py  elements.py  manager.py  renderer.py  schema.py
src/power/: manager.py
src/themes/: base.py  dial_manager.py  manager.py  schema.py
src/web/: api.py  app.py  views.py
src/web/static/js/: clock-preview.js  dial-preview.js  face-preview.js
src/web/templates/: agenda.html  alarms.html  base.html  clock.html  dial.html  faces.html  index.html  settings.html  themes.html  timer.html
