[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "piclock-sdk"
version = "0.1.0"
description = "Python SDK for controlling PiClock3 devices"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
examples = ["geopy>=2.4"]
